<resources>
    <string name="app_name">Pace Marketplace</string>
    <string name="accountp_add">Add a product</string>
    <string name="accountp_yourp">Your products</string>
    <string name="accountp_yourf">Your favorites</string>
    <string name="accountp_seetings">Account settings</string>
    <string name="addProduct">Add Product</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_menu">Search Menu</string>
    <string name="categories">Product Category</string>
    <string-array name="categories_array">
        <item>Textbooks</item>
        <item>Electronics</item>
        <item>Dorm Supplies</item>
        <item>Clothes</item>
        <item>School Supplies</item>
        <item>Movies, Music &amp; Games</item>
        <item>Beauty &amp; Health</item>
        <item>Other</item>
    </string-array>
    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>

    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="action_sign_out">Sign out</string>
</resources>