<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/accountPageTopBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/account_page_topbar"
            app:title="@string/app_name"
            app:titleTextColor="#FFFFFF" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hello_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello!"
            android:textColor="#000000"
            android:textSize="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="80dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/addProductButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountp_add"
            android:padding="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?attr/materialButtonOutlinedStyle"
            android:textColor="#000000"
            android:textAlignment="textStart"
            android:gravity="start" />
        <Button
            android:id="@+id/yourProductsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountp_yourp"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?attr/materialButtonOutlinedStyle"
            android:textColor="#000000"
            android:textAlignment="textStart"
            android:gravity="start" />
        <Button
            android:id="@+id/yourFavoritesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountp_yourf"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?attr/materialButtonOutlinedStyle"
            android:textColor="#000000"
            android:textAlignment="textStart"
            android:gravity="start" />
        <Button
            android:id="@+id/settingsPageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountp_seetings"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="?attr/materialButtonOutlinedStyle"
            android:textColor="#000000"
            android:textAlignment="textStart"
            android:gravity="start" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log Out"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:id="@+id/logout"/>


    </LinearLayout>


</FrameLayout>